# siteforge

./: .env.example  .gitignore  LICENSE  README.md  TODO.md  package-lock.json  package.json
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/siteforge_api/: main.py  schemas.py  settings.py
apps/api/siteforge_api/providers/: __init__.py  base.py  hoydedata.py
apps/api/siteforge_api/services/: data_status.py  geometry.py  mesh.py  projects.py  terrain.py
apps/api/tests/: test_data_status.py  test_geometry.py  test_hoydedata.py
apps/web/: index.html  package.json
apps/web/src/: App.tsx  main.tsx  styles.css
apps/web/src/components/: DataLayerPanel.tsx  MapSelector.tsx  ProjectDashboard.tsx  SceneViewer.tsx
apps/web/src/lib/: api.ts  projects.ts
data/samples/: README.md
docs/: data-sources.md  development.md  exports.md  mvp-workflow.md
