[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "siteforge-api"
version = "0.1.0"
description = "FastAPI terrain processing service for SiteForge."
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.124.0",
  "uvicorn[standard]>=0.38.0",
  "pydantic>=2.12.0",
  "pydantic-settings>=2.12.0",
  "httpx>=0.28.0",
  "shapely>=2.1.0",
  "pyproj>=3.7.0",
  "rasterio>=1.4.0",
  "numpy>=2.2.0",
  "trimesh>=4.9.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
  "ruff>=0.14.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["siteforge_api*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

